--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,14 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## catkin Config ##
 ###################
 
-catkin_package(
-    INCLUDE_DIRS include
-    CATKIN_DEPENDS geometry_msgs
-                   roscpp
-                   rospy
-                   sensor_msgs
-                   serial
-                   std_msgs)
+include_directories(include/y3space_driver)
+
+catkin_package(CATKIN_DEPENDS geometry_msgs
+                              roscpp
+                              rospy
+                              sensor_msgs
+                              serial
+                              std_msgs)
 
 ###########
 ## Build ##
@@ -35,10 +35,14 @@ include_directories(
     ${BOOST_INCLUDE_DIRS}
     ${catkin_INCLUDE_DIRS})
 
+add_library(serial_interface
+            src/y3space_driver/SerialInterface.cpp)
+
 add_executable(y3space_driver
                src/y3space_driver/Y3SpaceDriver.cpp
-               src/main.cpp)
+               src/y3space_driver/main.cpp)
 
-target_link_libraries(yostlab_driver_node
+target_link_libraries(y3space_driver
+                      serial_interface
                       ${catkin_LIBRARIES}
                       ${Boost_LIBRARIES})
