--- a/package.xml
+++ b/package.xml
@@ -6,10 +6,10 @@
 
   <maintainer email="jgomallette@gmail.com">Jeremy (MrCerealKiller)</maintainer>
   <author email="cagatay@robostate.com">cagatay</author>
-  <author email="cagatay@robostate.com">cagatay</author>
-  
+  <author email="jgomallette@gmail.com">Jeremy (MrCerealKiller)</author>
+
   <license>MIT</license>
-  
+
   <buildtool_depend>catkin</buildtool_depend>
   <depend>geometry_msgs</depend>
   <depend>roscpp</depend>
